--- a/src/components/auth/style.css
+++ b/src/components/auth/style.css
@@ -1,33 +1,43 @@
+.clg-name{
+    text-align: center;
+    font-style: italic;
+    font-size: 25px;
+    font-weight: 600;
+    margin: 0;
+}
+
 .reg {
-    border: 5px solid greenyellow;
+    /* border: 5px solid greenyellow; */
     border-radius: 10px;
-    box-shadow: 10px 10px 20px rgb(166, 224, 79);
-    background: greenyellow;
+    box-shadow: 10px 10px 20px rgb(129, 240, 197);
+    background: linear-gradient(to right, #aaffa9, #11ffbd);
     padding: 20px;
     width: 30%;
     margin: auto;
     display: grid;
     align-items: center;
-    margin-top: 7%;
+    margin-top: 2%;
 }
+
 .reg > input {
     margin-bottom: 10px;
     padding: 5px 10px;
     font-size: 20px;
     font-weight: 600;
-    border: 3px solid rgb(75, 90, 53);
+    border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
     font-family: 'Cambay', sans-serif;
 }
 .reg-submit-btn{
     padding: 10px 20px;
     border: none;
-    background: rgb(141, 153, 124);
+    background: rgb(78, 133, 104);
     font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
     transition: background 1s ease-in-out;
     font-family: 'Cambay', sans-serif;
+    margin-bottom: 10px;
 }
 .reg-submit-btn:hover{
     background: white;
